--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -12,3 +12,4 @@ find-no-matching-media=No matching media found.
 find-no-matching-character=No matching character found.
 direct-message-only=This can only be done inside direct messages.
 direct-message-cleared=I have cleared the trash for you.
+timeout-error=Your request timed out, please try again.
