Rework logging, finalize staff command

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,7 @@ unlink-not-linked=Your account is not linked to this discord server.
 unlink-successful=Your have successfully unlinked your account.
 find-no-matching-media=No matching media found.
 find-no-matching-character=No matching character found.
+find-no-matching-staff=No matching staff found.
 direct-message-only=This can only be done inside direct messages.
 direct-message-cleared=I have cleared the trash for you.
 timeout-error=Your request timed out, please try again.
