Add setting and guild join/leave event handling

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -14,3 +14,5 @@ find-no-matching-staff=No matching staff found.
 direct-message-only=This can only be done inside direct messages.
 direct-message-cleared=I have cleared the trash for you.
 timeout-error=Your request timed out, please try again.
+setting-updated=Setting successfully updated.
+server-only-error=This can only be done inside guilds.
