Setting should only be done by server admins

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -16,3 +16,4 @@ direct-message-cleared=I have cleared the trash for you.
 timeout-error=Your request timed out, please try again.
 setting-updated=Setting successfully updated.
 server-only-error=This can only be done inside guilds.
+server-admin-only=This can only be done by the server owner/administrator.
