chore: Update comments

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,7 @@
 user-username-required-error=Username is required when using in direct messages.
-user-account-not-linked=Your discord account is not linked to an AniList account. Use /link to begin.
+user-account-not-linked=Your discord account is not linked to an AniList account. Use **/link** to begin.
 user-not-found-error=User not found.
+user-linked-not-found=User is linked, but the AniList account associated was not found. Do a **/unlink** and update.
 unknown-error=An unknown error occurred.
 link-server-only-error=You can only link your account inside a server.
 link-already-linked=Your account is already linked.
