Huge rework for localization

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,8 +1,20 @@
+about-title=What is Basura?
+about-description=Basura literally means trash.\n\
+\n\
+Trash includes isekai bullshit, power leveling xianxia, wuxia, otome politics,\
+and any that heightens your level of idiotness.\n\
+\n\
+If you want to add more languages, feel free to hop on the github and submit a pull request.
+about-version=Version
+about-language=Language
+about-framework=Framework
+about-shard=Shard
+about-operating-system=Operating System
+about-note=You can help with the development by dropping by on GitHub.
 user-username-required-error=Username is required when using in direct messages.
 user-account-not-linked=Your discord account is not linked to an AniList account. Use **/link** to begin.
 user-not-found-error=User not found.
 user-linked-not-found=User is linked, but the AniList account associated was not found. Do a **/unlink** and update.
-unknown-error=An unknown error occurred.
 link-server-only-error=You can only link your account inside a server.
 link-already-linked=Your account is already linked.
 link-successful=Your have successfully linked your account.
@@ -14,7 +26,7 @@ find-no-matching-character=No matching character found.
 find-no-matching-staff=No matching staff found.
 direct-message-only=This can only be done inside direct messages.
 direct-message-cleared=I have cleared the trash for you.
-timeout-error=Your request timed out, please try again.
 setting-updated=Setting successfully updated.
 server-only-error=This can only be done inside guilds.
 server-admin-only=This can only be done by the server owner/administrator.
+locale-changed=Language successfully changed.
