Add message commands

--- a/src/main/resources/translations/user/strings.properties
+++ b/src/main/resources/translations/user/strings.properties
@@ -2,4 +2,5 @@ user.error.usernameRequired=Username is required when using in direct messages.
 user.error.userNotFound=User not found.
 user.error.linkNotFound=User is linked, but the AniList account associated was not found. Do a **/unlink** and update.
 user.error.accountNotLinked=Your discord account is not linked to an AniList account. Use **/link** to begin.
+user.error.userNotLinked=User is not linked with an AniList account.
 user.error.noUserStatistics=Statistics not found for this user.
